# CLI-Calculator

./: .gitignore  Readme.md  calculator.html  calculator.py  calculator_gui.py  pyproject.toml  test_calculator.py
.specify/memory/: constitution.md
history/prompts/001-cli-calculator/: 001-cli-calculator-specification.spec.prompt.md  002-spec-update-cli-input-errors.spec.prompt.md  003-commit-push-feature-spec.spec.prompt.md  004-spec-clarifications-division-unary.spec.prompt.md  005-commit-spec-clarifications.spec.prompt.md  006-plan-approval-commit.plan.prompt.md  007-task-generation.tasks.prompt.md  008-phase1-setup-implementation.green.prompt.md  009-phase2-full-implementation.green.prompt.md  010-phase7-polish-validation.green.prompt.md  011-update-pr-description.misc.prompt.md
history/prompts/002-modulo-operator/: 0001-phase-1-setup-implementation.green.prompt.md  0002-phase-2-modulo-by-zero-error-tdd.green.prompt.md  0003-commit-and-pr-phase-1-2.misc.prompt.md  0004-phase-3-us1-basic-modulo-mvp.green.prompt.md  0005-commit-phase-3-mvp.misc.prompt.md  0006-phase-4-us2-bodmas-precedence.green.prompt.md  0007-commit-phase-4-bodmas.misc.prompt.md  0008-phase-7-polish-validation.green.prompt.md  0009-commit-pr-phase-5-7.misc.prompt.md  001-modulo-operator-specification.spec.prompt.md  002-modulo-operator-plan.plan.prompt.md  003-modulo-operator-tasks.tasks.prompt.md  004-phase6-negative-numbers.green.prompt.md
history/prompts/constitution/: 001-python-calculator-constitution-creation.constitution.prompt.md  002-constitution-governance-amendment.constitution.prompt.md
history/prompts/general/: 003-initial-project-commit-to-github.general.prompt.md  004-glory-calculator-ui-creation.general.prompt.md
specs/001-cli-calculator/: plan.md  spec.md  tasks.md
specs/001-cli-calculator/checklists/: requirements.md
specs/002-modulo-operator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-modulo-operator/checklists/: requirements.md
tests/: __init__.py  test_cli.py  test_edge_cases.py  test_evaluator.py  test_modulo.py  test_parser.py  test_tokenizer.py
