[project]
name = "cli-calculator"
version = "0.1.0"
description = "CLI Calculator with BODMAS precedence and integer arithmetic"
readme = "Readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Asifkhan83", email = "asifkhan83@users.noreply.github.com"}
]
keywords = ["calculator", "cli", "arithmetic", "bodmas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = []

[project.scripts]
calculator = "calculator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["calculator.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "tokenizer: Tokenizer component tests",
    "parser: Parser component tests",
    "evaluator: Evaluator component tests",
    "cli: CLI integration tests",
    "edge_cases: Edge case and error handling tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
